# @file CMakeLists.txt
# @author Guilherme Versiani <guibv@comunip.com.br>
# @date 2/3/2010 10:49:52

# Copyright (c) 2010 ComunIP S/A. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

ADD_SUBDIRECTORY(poc)
ADD_SUBDIRECTORY(qtpoc)
ADD_SUBDIRECTORY(unittest)

# Modeline for vim: set tw=79 et ts=4:
